# universal-react-without-node

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.am  README  README.md  app.element.js  app.js  app.router.js  configure.ac  init.js  main.c  package.json  preamble.js  react_render.i  renderer.js  test-python.py  test.js  test2.js  webpack.config.js
clojure/: Makefile.am  test.clj
clojure/isomorphic-react/: README.md  project.clj
clojure/isomorphic-react/src/isomorphic_react/core/: handler.clj
clojure/isomorphic-react/test/isomorphic_react/core/: handler_test.clj
golang/: 6.out  react_render.6  react_render.go  react_render.swig  react_render_gc.6  react_render_gc.c  test.6  test.go
java/: Makefile.am  Test.java  test.clj
python/: Makefile.am  flask-server-element.py  flask-server.py  requirements.txt  test.py
src/: Makefile.am  main.c  react_render.c  react_render.h  react_render.i  react_render_check  react_render_check.c  render.c  render.h  render.i
